# jsontool

./: CMakeLists.txt
snap/: snapcraft.yaml
src/: main.cpp
